SAK-33243 fix styling of reorder lists

--- a/content/content-tool/tool/src/webapp/vm/content/chef_resources_reorder.vm
+++ b/content/content-tool/tool/src/webapp/vm/content/chef_resources_reorder.vm
@@ -45,7 +45,7 @@
 		
 
 		
-		<ul id="reorder-list" class="container-fluid">
+		<ul id="reorder-list" class="styled-reorder-list container-fluid">
 			#foreach($root in $this_site)
 				#set($collectionMembers = $root.members)
 				#set($count = 1)
