--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/toolGroupMultipleDisplay.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/toolGroupMultipleDisplay.vm
@@ -141,23 +141,19 @@
     </ul>
     </div>
     <div class="mathJaxToggleArea">
-      <p>$tlang.getString("sinfo.mathjax.allowForSite")</p>
+      <label class="onoffswitch-label" for="isMathJaxEnabledForSite">
+          $tlang.getString("sinfo.mathjax.allowForSite")
+      </label>
       <div class="onoffswitch">
           <input type="checkbox" name="isMathJaxEnabledForSite" class="onoffswitch-checkbox" id="isMathJaxEnabledForSite" #if($isMathJaxEnabledForSite)checked="checked"#end>
-          <label class="onoffswitch-label" for="isMathJaxEnabledForSite">
-              <span class="onoffswitch-inner"></span>
-              <span class="onoffswitch-switch"></span>
-          </label>
       </div>
     </div>
     <div class="lessonsSubNavToggleArea" style='display: none'>
-      <p>$tlang.getString("sinfo.lessonbuildersubnav.allowForSite")</p>
+      <label class="onoffswitch-label" for="isLessonsSubNavEnabledForSite">
+          $tlang.getString("sinfo.lessonbuildersubnav.allowForSite")
+      </label>
       <div class="onoffswitch">
           <input type="checkbox" name="isLessonsSubNavEnabledForSite" class="onoffswitch-checkbox" id="isLessonsSubNavEnabledForSite" #if($isLessonsSubNavEnabledForSite)checked="checked"#end>
-          <label class="onoffswitch-label" for="isLessonsSubNavEnabledForSite">
-              <span class="onoffswitch-inner"></span>
-              <span class="onoffswitch-switch"></span>
-          </label>
       </div>
     </div>
     <script>
