LSNBLDR-841 - Lessons - "Add Question" - Poll results truncated in Show Poll (#4734)

--- a/lessonbuilder/tool/src/webapp/templates/ShowPage.html
+++ b/lessonbuilder/tool/src/webapp/templates/ShowPage.html
@@ -795,6 +795,7 @@
                                 
                                 <div style="display:none" rsf:id="questionPollData:" class="questionPollData">
                                     <span rsf:id="questionPollText" class="questionPollText"></span>
+                                    <span rsf:id="questionPollLegend" class="questionPollLegend"></span>
                                     <span rsf:id="questionPollNumber" class="questionPollNumber"></span>
                                 </div>
                                 <div rsf:id="questionPollGraph" class="questionPollGraph"></div>
