--- a/assignment/tool/src/webapp/vm/assignment/chef_assignments_instructor_new_edit_assignment.vm
+++ b/assignment/tool/src/webapp/vm/assignment/chef_assignments_instructor_new_edit_assignment.vm
@@ -26,7 +26,9 @@
 		 		});
 		 	});
 		#end
-		SetMaxPoint(document.getElementById('$name_GradeType'), document.getElementById('$name_GradePoints'));
+		if ($("#generalAlert").length <= 0) {
+			SetMaxPoint(document.getElementById('$name_GradeType'), document.getElementById('$name_GradePoints'));
+		}
 	});
 
     function SetMaxPoint(obj_option, obj_textfield)
@@ -118,7 +120,7 @@
 	</div>
 
 	#if ($alertMessage)
-		<div class="alertMessage">
+		<div class="alertMessage" id="generalAlert">
 			<strong>$tlang.getString("gen.alert")</strong> <small> $alertMessage </small>
 		</div>
 	#end
